--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.20.5",
     "axios": "^0.27.2",
     "notistack": "^2.0.5",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
