--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "moment-timezone": "^0.5.34",
     "notistack": "^2.0.5",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
