--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass-loader": "^13.0.0"
   }
 }
