--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.20.5",
     "axios": "^0.27.2",
     "moment-timezone": "^0.5.34",
+    "node-engine": "^0.0.5",
     "notistack": "^2.0.5",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
